--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,16 @@
 @import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
 
 /* Basic */
-
+	
+	@viewport {
+  		width: device-width ;
+  		zoom: 1.0 ;
+	}
+	
+	@-ms-viewport {
+  		width: device-width ;
+	}
+	
 	body {
 		background: #222833;
 	}
