--- a/css/style-normal.css
+++ b/css/style-normal.css
@@ -4,6 +4,8 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 
+alert("style-normal loaded");
+
 /* Basic */
 
 	header.major {
