--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,11 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
 
+@import url("font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
+
 /* Basic */
-	
-	@viewport {
-  		width: device-width ;
-  		zoom: 1.0 ;
-	}
-	
-	@-ms-viewport {
-  		width: device-width ;
-	}
-	
+		
 	body {
 		background: #222833;
 	}
