--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@
 	}
 
 	p, ul, ol, dl, table, blockquote {
-		margin: 0 0 2em 0;
+		margin: 0 0 2em 0;		
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -203,7 +203,8 @@
 				width: 8%;
 				height: 8%;
 				opacity: 0.75;
-				margin: -10px 0 0 10px;				
+				margin: -10px 0 0 10px;
+				float: left;			
 			}		
 
 		.image.fit {
@@ -474,8 +475,8 @@
 	}
 
 	.wrapper.style2 {
-		background: #ececec;
-		padding: 6em 0;
+		background: #ffffff;
+		padding: 2em 0;
 		text-align: center;
 	}
 
@@ -505,6 +506,7 @@
 		text-align: center;
 		background-position: 0% 65%;
 		position: relative;
+			
 	}
 
 		#header:before {
@@ -514,7 +516,7 @@
 			top: 0;
 			width: 100%;
 			height: 100%;
-			background: rgba(16, 32, 48, 0.25);
+			background: rgba(16, 32, 48, 0.4);
 		}
 
 		#header > * {
@@ -523,7 +525,7 @@
 		}
 
 		.homepage #header {
-			padding: 8em 0;
+			padding: 3em 0;
 			background-position: center;
 		}		
 
@@ -550,7 +552,7 @@
 				color: #FFF;
 				font-weight: 700;
 				text-decoration: none;
-				font-size: 1.2em;
+				font-size: 1.5em;
 			}
 
 			#nav > ul > li:first-child {
@@ -662,7 +664,7 @@
 /* Footer */
 
 	#footer {
-		padding: 4em 0;
+		padding: 2em 0;
 		color: #fff;
 	}
 
@@ -676,8 +678,8 @@
 		}
 
 		#footer .copyright {
-			margin-top: 3em;
-			padding-top: 3em;
+			margin-top: 1em;
+			padding-top: 1em;
 			border-top: 1px solid;
 			border-color: rgba(192, 192, 192, 0.15);
 			text-align: center;
