--- a/css/style.css
+++ b/css/style.css
@@ -187,10 +187,10 @@
 
 			.image.orglogo img {
 				display: block;
-				width: 30%;
+				width: 50%;
 				height: auto;
-				opacity: 0.65;
-				margin: -25px 0 0 35%;							
+				opacity: 0.5;
+				margin: -25px 0px 0 25%;							
 			}
 
 		.image.logo {	
