--- a/css/style.css
+++ b/css/style.css
@@ -689,3 +689,40 @@
 		#footer a {
 			color: inherit;
 		}
+
+/* Table */
+
+		.divTable{
+			display: table;
+			width: 100%;
+			border-collapse: collapse;
+		}
+
+		.divTableRow {
+			display: table-row;
+			border: solid;
+  			border-width: 1px 0;
+		}
+
+		.divTableHeading {
+			background-color: #EEE;
+			display: table-row;
+			font-weight: bold;
+		}
+
+		.divTableCell, .divTableHead {
+			border: 0px solid #999999;
+			display: table-cell;
+			padding: 3px 10px;
+		}		
+
+		.divTableFoot {
+			background-color: #EEE;
+			display: table-footer-group;
+			font-weight: bold;
+		}
+
+		.divTableBody {
+			display: table-row-group;
+		}	
+
